<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/username"
            android:maxLength="16"
            android:ems="10"
            android:id="@+id/etUsr"
            android:layout_marginTop="50dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:maxLength="16"
            android:ems="10"
            android:id="@+id/etPass"
            android:layout_marginTop="50dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/id"
            android:maxLength="16"
            android:ems="10"
            android:id="@+id/etClienteId"
            android:layout_marginTop="50dp" />

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/pgGUL"
            android:layout_gravity="center_horizontal"
            android:visibility="gone"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/email"
            android:maxLength="45"
            android:ems="10"
            android:id="@+id/etEmail"
            android:layout_marginTop="50dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberPassword"
            android:hint="@string/password2"
            android:maxLength="16"
            android:ems="10"
            android:id="@+id/etPassword"
            android:layout_gravity="right"
            android:layout_marginTop="50dp" />
    </LinearLayout>
</RelativeLayout>
